@@ -1,3 +1,11 @@
+2005-06-09  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gweather-applet.c:
+	* main.c: (gweather_applet_new):
+	* weather.c:
+	* weather.h: Remove a lot of old unused stuff so we don't
+	use gnome_config_* any more. Closes bug #172028.
+
 2005-04-03  Ryan Lortie  <desrt@desrt.ca>
 
 	** MERGE CHANGES FROM HEAD **
